@@ -4861,6 +4861,13 @@ namespace Orthanc
   }
 
 
+  bool OrthancPlugins::HasCustomTranscoder()
+  {
+    boost::shared_lock<boost::shared_mutex> lock(pimpl_->decoderTranscoderMutex_);
+    return !pimpl_->transcoderCallbacks_.empty();
+  }
+
+
   ImageAccessor* OrthancPlugins::Decode(const void* dicom,
                                         size_t size,
                                         unsigned int frame)
