@@ -7,6 +7,8 @@ General
 * DICOM transcoding over the REST API
 * Transcoding from compressed to uncompressed transfer syntaxes over DICOM
   C-STORE SCU (if the remote modality doesn't support compressed syntaxes)
+* New configuration options: "TranscodeDicomProtocol" and
+  "BuiltinDecoderTranscoderOrder"
 
 REST API
 --------
